# ufomerge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
Lib/ufomerge/: __init__.py  __main__.py  cli.py  layout.py  scaler.py
tests/: conftest.py  test_basic.py  test_layout.py
