[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ufomerge"
description = "Merge together two source fonts in UFO format"
readme = "README.md"
dynamic = ["version"]
authors = [
  { name = "Simon Cozens", email = "simon@simon-cozens.org" }
]
classifiers = [
  'Environment :: Console',
  'Topic :: Text Processing :: Fonts',
]
dependencies = [
  'fonttools>=4.53.1',  # We need visitor inheritance, introduced in 4.53.1
  'ufoLib2',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "fontFeatures"
]

[project.scripts]
ufomerge = "ufomerge.cli:main"

[tool.setuptools.packages.find]
where = ["Lib"]

[tool.setuptools_scm]
write_to = "Lib/ufomerge/_version.py"
git_describe_command = "git describe --match 'v*'"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
